# QuickProbs

./: README.md
src/: CMakeLists.txt  History.txt
src/Alignment/: CMakeLists.txt
src/Alignment/DataStructures/: SparseHelper.cpp
src/Alignment/Multiple/: BasicMSA.cpp  ColumnRefinement.cpp  Configuration.cpp  Configuration.h  ConfigurationHelper.h  ConsistencyStage.cpp  ConstructionStage.cpp  EntropyEvaluator.cpp  ExpPartitionFunctionParams.h  ExtendedMSA.cpp  ExtendedMSA.h  GuideTree.cpp  KernelMSA.cpp  KernelMSA.h  KernelSet.cpp  LogPartitionFunctionParams.h  PosteriorStage.cpp  PosteriorTask.cpp  QuickConsistencyStage.cpp  QuickConsistencyStage.h  QuickPosteriorStage.cpp  QuickPosteriorStage.h  RandomRefinement.cpp  RefinementBase.cpp  RelaxationKernelWrapper.h  RelaxationSector.cpp  RelaxationSector.h  ScoringRefinement.cpp  TreeRefinement.cpp
src/Alignment/Multiple/__Previews/: KernelMSA.cppPreview
src/Common/: CMakeLists.txt  ProgramOptions.h  ProgramOptions2.h  StatisticsProvider.h
src/Console/: CMakeLists.txt  main.cpp
src/Console-OpenCL/: CMakeLists.txt  main-opencl.cpp
src/Hardware/: CMakeLists.txt  DeviceInfo.cpp  OpenCl.cpp
src/KernelAlignment/: CMakeLists.txt  process_kernel_files.py
src/KernelAlignment/Multiple/: QuickPosteriorStage.cpp
src/KernelRepository/: AuxiliaryStructures.cl  KernelFactory.cpp  process_kernel_files.py
trunk/: README.txt
trunk/src/Alignment/Multiple/: ClusterTree.h  ColumnRefinement.h  Configuration.cpp  ProbabilisticModel.cpp  QuickConsistencyStage.cpp  RandomRefinement.h  RefinementBase.cpp  RefinementBase.h  RelaxationKernelWrapper.h
trunk/src/Common/: CMakeLists.txt
trunk/src/Hardware/: DeviceInfo.cpp  OpenCl.cpp  OpenCl.h
trunk/src/KernelRepository/: CMakeLists.txt  KernelFactory.cpp  MultipleConsistency_old.cl
v2.03/: README.txt
v2.03/out-makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
v2.03/out-makefiles/Alignment/: Makefile  cmake_install.cmake
v2.03/out-makefiles/Common/: Makefile  cmake_install.cmake
v2.03/out-makefiles/Console-OpenCL/: Makefile  cmake_install.cmake
v2.03/out-makefiles/Hardware/: Makefile  cmake_install.cmake
v2.03/out-makefiles/KernelRepository/: Makefile  cmake_install.cmake
v2.03/out-vs11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  QuickProbs.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
v2.03/out-vs11/Alignment/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Alignment.sln  Alignment.vcxproj  Alignment.vcxproj.filters  cmake_install.cmake
v2.03/out-vs11/Common/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Common.sln  Common.vcxproj  Common.vcxproj.filters  cmake_install.cmake
v2.03/out-vs11/Console-OpenCL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Console-OpenCl.sln  Console-OpenCl.vcxproj  Console-OpenCl.vcxproj.filters  cmake_install.cmake
v2.03/out-vs11/Hardware/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Hardware.sln  Hardware.vcxproj  Hardware.vcxproj.filters  cmake_install.cmake
v2.03/out-vs11/KernelRepository/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  KernelRepository.sln  KernelRepository.vcxproj  KernelRepository.vcxproj.filters  cmake_install.cmake
v2.03/src/: CMakeLists.txt
v2.03/src/Alignment/: Alignment.h
v2.03/src/Alignment/DataStructures/: SparseHelper.cpp  SparseHelper.h
v2.03/src/Alignment/Multiple/: AuxiliaryStructures.h  BufferSet.h  ClusterTree.cpp  ColumnRefinement.cpp  Configuration.cpp  Configuration.cpp.bak  ConfigurationHelper.h  ConsistencyStage.h  ConstructionStage.cpp  ExtendedMSA.cpp  ExtendedMSA.h  GuideTree.cpp  GuideTree.h  KernelMSA.cpp  KernelSet.cpp  KernelSet.h  PartitionFunction.h  PosteriorTasksWave.cpp  PosteriorTasksWave.h  QuickConsistencyStage.h  RelaxationSector.h
v2.03/src/Console-OpenCL/: CMakeLists.txt  main-opencl.cpp
v2.03/src/Hardware/: CMakeLists.txt
v2.03/src/KernelRepository/: KernelRepository.cpp
